Fix spacing in app

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,10 @@
   color: white;
 }
 
+.App-content {
+  padding-top: 4%;
+}
+
 .App-link {
   color: #61dafb;
 }
